--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -54,7 +54,7 @@ jobs:
 
     - name: Setup variables
       run: |
-        sudo timedatectl set-timezone 'Asia/Shanghai'
+        sudo timedatectl set-timezone 'Australia/Melbourne'
         git config --global user.name 'actions'
         git config --global user.email 'action@github.com'
         echo build_dir="/builder" >> "$GITHUB_ENV"
